--- a/runner/config.toml
+++ b/runner/config.toml
@@ -12,9 +12,9 @@ check_interval = 0
   [runners.docker]
     tls_verify = false
     image = "ubuntu:latest"
-    privileged = false
+    privileged = true
     disable_entrypoint_overwrite = false
     oom_kill_disable = false
     disable_cache = false
     volumes = ["/cache"]
-    shm_size = 0
+    shm_size = "256m"
